--- a/css/colors/golden.css
+++ b/css/colors/golden.css
@@ -1,6 +1,6 @@
 /* Golden Version CSS */
 
-a:link, a:visited, a:hover, a:focus{text-decoration: none; color: #FFD700;}
+a:link, a:visited, a:hover, a:focus{text-decoration: none; color: #82e0ff;}
 
 .navbar-brand {
 	background: url("../../images/logo-white8.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
@@ -8,23 +8,23 @@ a:link, a:visited, a:hover, a:focus{text-decoration: none; color: #FFD700;}
 
 /* Home Slider */
 #home-slider .caption h1 strong{
-	color:#FFD700;
+	color:#82e0ff;
 }
 
 .left-control:hover,
 .right-control:hover {
-	background-color: #FFD700;
+	background-color: #82e0ff;
 }
 
 .learn-more {
-    border: 2px solid #FFD700;
+    border: 2px solid #82e0ff;
 }
 .learn-more:hover {
-	background: #FFD700;
+	background: #82e0ff;
 }
 
 .left-control, .right-control {
-	border:1px solid #FFD700;
+	border:1px solid #82e0ff;
 }
 /* End Home Slider */
 
@@ -32,21 +32,21 @@ a:link, a:visited, a:hover, a:focus{text-decoration: none; color: #FFD700;}
 /* Navbar */
 
 /* Link Color */
-.navbar-inverse { border-color: #FFD700}
-.navbar-inverse .navbar-nav>li>a:hover, .navbar-inverse .navbar-nav>li>a:focus { color: #FFD700}
-.navbar-inverse .navbar-nav>.active>a,.navbar-inverse .navbar-nav>.open>a, .navbar-inverse .navbar-nav>.open>a:hover, .navbar-inverse .navbar-nav>.open>a:focus { color: #FFD700}
-.navbar-inverse .navbar-nav>.active>a:hover, .navbar-inverse .navbar-nav>.active>a:focus { color: #FFD700}
-.dropdown-menu>li>a { color: #FFD700}
-.navbar-inverse .navbar-nav>.dropdown>a:hover .caret { border-top-color: #FFD700}
+.navbar-inverse { border-color: #82e0ff}
+.navbar-inverse .navbar-nav>li>a:hover, .navbar-inverse .navbar-nav>li>a:focus { color: #82e0ff}
+.navbar-inverse .navbar-nav>.active>a,.navbar-inverse .navbar-nav>.open>a, .navbar-inverse .navbar-nav>.open>a:hover, .navbar-inverse .navbar-nav>.open>a:focus { color: #82e0ff}
+.navbar-inverse .navbar-nav>.active>a:hover, .navbar-inverse .navbar-nav>.active>a:focus { color: #82e0ff}
+.dropdown-menu>li>a { color: #82e0ff}
+.navbar-inverse .navbar-nav>.dropdown>a:hover .caret { border-top-color: #82e0ff}
 
 .navbar-toggle {
 	border: transparent;
-	background-color: #FFD700;
+	background-color: #82e0ff;
 }
 
 .navbar-inverse .navbar-toggle:hover,
 .navbar-inverse .navbar-toggle:focus {
-  	background-color: #FFD700;
+  	background-color: #82e0ff;
 }
 
 /* End Navbar */
@@ -54,19 +54,19 @@ a:link, a:visited, a:hover, a:focus{text-decoration: none; color: #FFD700;}
 /* Loader */
 .spinner > div
 {
-	background: #FFD700;
+	background: #82e0ff;
 }
 /*  End Loader */
 
 /* Titles & Color */
 .section-title h1 span{
-	background-color: #FFD700;
+	background-color: #82e0ff;
 }
 
 
 .btn {
     background-image: none;
-	background-color: #FFD700;
+	background-color: #82e0ff;
 	color: #fff;
 }
 
@@ -80,7 +80,7 @@ a.btn {
 
 .btn-inverse:hover{
 	color: #fff;
-	background-color: #FFD700;
+	background-color: #82e0ff;
 }
 
 .btn-inverse:hover a{
@@ -97,86 +97,86 @@ a.btn-inverse:hover {
 }
 
 .btn:hover a{
-	color: #FFD700;
+	color: #82e0ff;
 }
 
 .btn-inverse {
-	color: #FFD700;
-    border: 1px solid #FFD700;
+	color: #82e0ff;
+    border: 1px solid #82e0ff;
 }
 
 a.btn-inverse{
-	color: #FFD700;
+	color: #82e0ff;
 }
 
 .btn-inverse a{
-	color: #FFD700;
+	color: #82e0ff;
 }
 
 
 a.btn:hover {
-	color: #FFD700;
+	color: #82e0ff;
 }
 
 .btn a:hover {
-	color: #FFD700;
+	color: #82e0ff;
 }
 
 .btn-one{
-    background: none repeat scroll 0 0 #FFD700;
-    border: 1px solid #FFD700;
+    background: none repeat scroll 0 0 #82e0ff;
+    border: 1px solid #82e0ff;
 	color: #fff !important;
 }
 
 .btn-one:hover {
-    border: 1px solid #FFD700;
-	color: #FFD700;
+    border: 1px solid #82e0ff;
+	color: #82e0ff;
 	background: transparent;
 }
 
 
 .btn:hover {
-	border: 1px solid #FFD700;
-	color: #FFD700;
+	border: 1px solid #82e0ff;
+	color: #82e0ff;
 }
 
 .hovicon.effect-1 {
-	background: #FFD700;
+	background: #82e0ff;
 }
 
 .hovicon.effect-1:after {
-	box-shadow: 0 0 0 4px #FFD700;
+	box-shadow: 0 0 0 4px #82e0ff;
 }
 
 .text-color {
-    background: none repeat scroll 0 0 #FFD700;
+    background: none repeat scroll 0 0 #82e0ff;
 }
 
 .dporcaps-negative {
-    background: none repeat scroll 0 0 #FFD700;
+    background: none repeat scroll 0 0 #82e0ff;
 }
 
 .dporcaps {
-    color: #FFD700;
+    color: #82e0ff;
 }
 
 .blockqoute-style-2 {
-    border-left: 5px solid #FFD700;
+    border-left: 5px solid #82e0ff;
 }
 
 cite {
-    color: #FFD700;
+    color: #82e0ff;
 }
 
 
 /* Effect 1a */
 .hovicon.effect-1.sub-a:hover {
-	background: #FFD700;
+	background: #82e0ff;
 }
 
 .main-color
 {
-	color: #FFD700;
+	color: #82e0ff;
 }
 
 .white-color
@@ -189,222 +189,222 @@ cite {
 
 /* Facts */
 .number p:first-letter {
-  color: #FFD700;
+  color: #82e0ff;
 }
 /* End Facts */
 
 /* Team Member */
 .team-member-holder:hover {
-	border-color: #FFD700;
+	border-color: #82e0ff;
 }
 
 .img-overlay {
-	background: #FFD700;
+	background: #82e0ff;
 }
 
 .view-profile {
-	color:#FFD700;
+	color:#82e0ff;
 }
 
 .team-member-social-list-item {
-	color: #FFD700;
+	color: #82e0ff;
 }
 
 .team-details h3{
-	color: #FFD700;
+	color: #82e0ff;
 }
 /* End Team Member */
 
 /* Skills */
 .skills h4:first-letter {
-  color: #FFD700;
+  color: #82e0ff;
 }
 /* End Skills */
 
 /* Works */
 #filters li span.active,#filters li span:hover {
-	background: #FFD700;
+	background: #82e0ff;
 }
 
 #filters li span {
-	border: 1px solid #FFD700;
-	color: #FFD700;
+	border: 1px solid #82e0ff;
+	color: #82e0ff;
 }
 
 .project-details h3 {
-	color: #FFD700;
+	color: #82e0ff;
 }
 
 .project-description h3 {
-	color: #FFD700;
+	color: #82e0ff;
 }
 
 /* End Works */
 
 /* Partners */
 .partners-img:hover img{
-	border-color: #FFD700;
+	border-color: #82e0ff;
 }
 /* End Partners */
 
 /* Pricing */
 .single-table h4:first-letter {
-  color: #FFD700;
+  color: #82e0ff;
 }
 
 .price-icon {
-    background-color: #FFD700;
+    background-color: #82e0ff;
 }
 
 span.price {
-    color: #FFD700;
+    color: #82e0ff;
 }
 
 .single-table .btn-price, .sign_form input[type="submit"] {
-    background: none repeat scroll 0 0 #FFD700;
-    border: 1px solid #FFD700;
+    background: none repeat scroll 0 0 #82e0ff;
+    border: 1px solid #82e0ff;
 }
 
 .single-table .btn-price:hover {
-    border: 1px solid #FFD700;
-	color: #FFD700;
+    border: 1px solid #82e0ff;
+	color: #82e0ff;
 }
 
 .single-table.featured .price-icon, .single-table.featured .btn-price {
-    color: #FFD700;
+    color: #82e0ff;
 }
 
 .single-table.featured{
-    background-color: #FFD700;
+    background-color: #82e0ff;
 }
 
 .single-table.featured .price {
-    background-color: #FFD700;
+    background-color: #82e0ff;
 }
 /* End Pricing */
 
 /* Clients */
 .clients h5 {
-	color: #FFD700;
+	color: #82e0ff;
 }
 
 .carousel-indicators .active {
-  background-color: #FFD700;
-  border-color: #FFD700;
+  background-color: #82e0ff;
+  border-color: #82e0ff;
 }
 
 .carousel-indicators li {
-  border-color: #FFD700;
+  border-color: #82e0ff;
 }
 /* End Clients */
 
 /* News */
 .post-date {
-    background-color: #FFD700;
+    background-color: #82e0ff;
 }
 
 .entry-title a:hover {
-    color: #FFD700;
+    color: #82e0ff;
 }
 /* End News */
 
 /* Blog */
 .widget.tags-cloud a {
-    border: 1px solid #FFD700;
+    border: 1px solid #82e0ff;
 }
 
 .widget.tags-cloud a:hover {
-    border: 1px solid #FFD700;
-    background-color: #FFD700;
+    border: 1px solid #82e0ff;
+    background-color: #82e0ff;
 }
 
 .tags a {
-    border: 1px solid #FFD700;
+    border: 1px solid #82e0ff;
 }
 
 .tags a:hover {
-    border: 1px solid #FFD700;
-    background-color: #FFD700;
+    border: 1px solid #82e0ff;
+    background-color: #82e0ff;
 }
 
 
 .pager li > a, .pager li > span {
-    border: 1px solid #FFD700;
+    border: 1px solid #82e0ff;
 }
 .pager li > a:hover, .pager li > a:focus {
-    border: 1px solid #FFD700;
-	background-color: #FFD700;
+    border: 1px solid #82e0ff;
+	background-color: #82e0ff;
 }
 /* End Blog */
 
 
 /* Tweet */
 #twitter-carousel .item a {
-    color: #FFD700;
+    color: #82e0ff;
 }
 
 .twitter-icon .fa-twitter:after {
-    border-color: #FFD700 transparent transparent;
+    border-color: #82e0ff transparent transparent;
 }
 
 .twitter-icon .fa-twitter, .twitter-left-control:hover, .twitter-right-control:hover {
-    background-color: #FFD700;
+    background-color: #82e0ff;
 }
 /* End Tweet */
 
 /* Footer */
 .bottom-footer {
-	border-top: 7px solid #FFD700;
+	border-top: 7px solid #82e0ff;
 }
 
 .bottom-footer-left p a {
-    color: #FFD700;
+    color: #82e0ff;
 }
 
 .bottom-social-icons li a i{
-	background-color: #FFD700;
-	border: 1px solid #FFD700;
+	background-color: #82e0ff;
+	border: 1px solid #82e0ff;
 }
 
 .bottom-social-icons li a i:hover{
-	color: #FFD700;
+	color: #82e0ff;
 }
 
 /* End Footer */
 
 /* Contacts */
 .contact_form i{
-    color: #FFD700;
+    color: #82e0ff;
 }
 
 .contact_form input[type="submit"] {
-	background: #FFD700;
-    border: 1px solid #FFD700;
+	background: #82e0ff;
+    border: 1px solid #82e0ff;
 }
 
 .contact_form input[type="submit"]:hover {
-    color: #FFD700;
+    color: #82e0ff;
 }
 
 .sign_form input[type="submit"]:hover {
-	color: #FFD700;
+	color: #82e0ff;
 }
 /* End Contacts */
 
 /* To Top */
 a.scroll-up {
-    background: none repeat scroll 0 0 #FFD700;
+    background: none repeat scroll 0 0 #82e0ff;
 }
 a.scroll-up i {
     color: #fff;
 }
 
 a.scroll-up:hover i {
-    color: #FFD700;
+    color: #82e0ff;
 }
 
 a.scroll-up:hover {
-	color: #FFD700;
-	border-color: #FFD700;
+	color: #82e0ff;
+	border-color: #82e0ff;
 }
 /* End To Top */
